Mon Apr 02 07:41:57 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc: Avoid having the same database open twice at
	  once.  Xapian itself copes, but the BackendManager class in the test
	  harness struggles in the remotetcp case under mingw.

Mon Apr 02 07:14:13 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Make Enquire constructor explicit since
	  it can take a single parameter (of type Database).

Mon Apr 02 02:32:23 BST 2007  Olly Betts <olly@survex.com>

	* net/tcpserver.cc: Add "#error" if neither HAVE_FORK nor __WIN32__
	  is defined (otherwise we'd failed with a rather obscure link error
	  much later!)

Mon Apr 02 01:54:20 BST 2007  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Remove unused variable left over from
	  recent change.

Mon Apr 02 01:22:56 BST 2007  Olly Betts <olly@survex.com>

	* net/tcpserver.cc: Actually remove SOCKOPT_OPTIONS_TYPE.

Mon Apr 02 01:16:03 BST 2007  Olly Betts <olly@survex.com>

	* net/tcpclient.cc,net/tcpserver.cc: Pass the 4th parameter of
	  setsockopt() as char* which works whether the function actually
	  takes char* or void* (since C++ allows implicit conversion from
	  char* to void*).  Only call socket_errno() after gethostbyname()
	  under __WIN32__ - on UNIX the error code is in h_errno (with
	  incompatible values to errno) and we don't want to confuse things by
	  reporting some random value of errno.

Mon Apr 02 00:44:56 BST 2007  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager.cc: Factor out localhost address into
	  LOCALHOST.  Use new xapian-tcpsrv --interface option to only listen
	  for connections on localhost.  Run xapian-tcpsrv with "start /B" on
	  MS Windows (this stops the "flickbook of console windows" effect).

Mon Apr 02 00:41:31 BST 2007  Olly Betts <olly@survex.com>

	* common/Makefile.mk,common/safesyssocket.h: Oops, I checked
	  in safesysselect.h as safesyssocket.h!

Mon Apr 02 00:30:54 BST 2007  Olly Betts <olly@survex.com>
