@@ -1,3 +1,12 @@
+Mon Apr 02 09:37:14 BST 2007  Olly Betts <olly@survex.com>
+
+	* tests/harness/backendmanager.cc: Pull `1239' out as `DEFAULT_PORT'.
+	  On Windows, cycle through 10 ports starting at DEFAULT_PORT so that
+	  we can have multiple databases open at once.  Add a monotonic count
+	  to the name of the log file created from the output of each
+	  xapian-tcpsrv to avoid failures because the log file is already
+	  open.
+
 Mon Apr 02 07:41:57 BST 2007  Olly Betts <olly@survex.com>
 
 	* tests/api_anydb.cc: Avoid having the same database open twice at
